--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -100,9 +100,11 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\GameGraphicsProgrammingStarterPack-main\Lab06\Game\Light\RotatingPointLight.cpp" />
     <ClCompile Include="Cube\AdditionalCube.cpp" />
     <ClCompile Include="Cube\BaseCube.cpp" />
     <ClCompile Include="Cube\Cube.cpp" />
+    <ClCompile Include="Cube\RotatingCube.cpp" />
     <ClCompile Include="Cube\YourCube.cpp" />
     <ClCompile Include="Cube\YourCube2.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -112,12 +114,15 @@
     <FxCompile Include="Shaders\VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\PhongShaders.fxh" />
     <None Include="Shaders\Shaders.fxh" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\GameGraphicsProgrammingStarterPack-main\Lab06\Game\Light\RotatingPointLight.h" />
     <ClInclude Include="Cube\AdditionalCube.h" />
     <ClInclude Include="Cube\BaseCube.h" />
     <ClInclude Include="Cube\Cube.h" />
+    <ClInclude Include="Cube\RotatingCube.h" />
     <ClInclude Include="Cube\YourCube.h" />
     <ClInclude Include="Cube\YourCube2.h" />
   </ItemGroup>
