--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <None Include="Shaders\PhongShaders.fxh" />
     <None Include="Shaders\Shaders.fxh" />
+    <None Include="Shaders\ShadowShaders.fxh" />
     <None Include="Shaders\SkinningShaders.fxh" />
     <None Include="Shaders\VoxelShaders.fxh" />
   </ItemGroup>
