--- a/Source/Game/Game.vcxproj.filters
+++ b/Source/Game/Game.vcxproj.filters
@@ -76,6 +76,9 @@
     <None Include="Shaders\SkinningShaders.fxh">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="Shaders\ShadowShaders.fxh">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube\BaseCube.h">
