[ASS03] assignment03 submitted

--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -114,10 +114,13 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Shaders\CubeMap_PS.hlsl" />
+    <FxCompile Include="Shaders\CubeMap_VS.hlsl" />
     <FxCompile Include="Shaders\PS.hlsl" />
     <FxCompile Include="Shaders\VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\CubeMap.fxh" />
     <None Include="Shaders\PhongShaders.fxh" />
     <None Include="Shaders\Shaders.fxh" />
     <None Include="Shaders\ShadowShaders.fxh" />
@@ -135,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Content\Common\InvalidTexture.png" />
+    <Image Include="Content\Common\Maskonaive2_1024.dds" />
     <Image Include="Content\Cube\diffuse.png" />
     <Image Include="Content\Cube\normal.png" />
     <Image Include="seafloor.dds" />
